@@ -18,7 +18,7 @@ export(.check3d,
 	rgl.attrib, rgl.attrib.count, rgl.dev.list, rgl.useNULL,
 	rgl.viewpoint, rgl.window2user, rglFonts, r3dDefaults, rotate3d, rotationMatrix,
 	scale3d, scaleMatrix, scene3d, segments3d, select3d, selectpoints3d,
-	rgl.setMouseCallbacks, shade3d, 
+	rgl.setMouseCallbacks, rgl.setWheelCallback, shade3d, 
 	shapelist3d, snapshot3d, Sweave.snapshot,
 	spheres3d, spin3d, sprites3d, subdivision3d, 
 	subsceneInfo, subsceneList,
