@@ -19,9 +19,12 @@ enum MouseModeID {mmTRACKBALL = 1, mmXAXIS, mmYAXIS, mmZAXIS, mmPOLAR,
                   mmSELECTING, mmZOOM, mmFOV, mmUSER};
 enum MouseSelectionID {msNONE=1, msCHANGING, msDONE, msABORT};
 
+enum WheelModeID {wmPUSH = 1, wmPULL, wmUSER};
+
 typedef void (*userControlPtr)(void *userData, int mouseX, int mouseY);
 typedef void (*userControlEndPtr)(void *userData);
 typedef void (*userCleanupPtr)(void **userData);
+typedef void (*userWheelPtr)(void *userData, int dir);
 
 class RGLView : public View
 {
@@ -50,6 +53,11 @@ public:
                                             userControlEndPtr end, userCleanupPtr cleanup, void** user);
   void        getMouseCallbacks(int button, userControlPtr *begin, userControlPtr *update, 
                                             userControlEndPtr *end, userCleanupPtr *cleanup, void** user);
+  WheelModeID getWheelMode();
+  void        setWheelMode(WheelModeID mode);
+  void        setWheelCallback(userWheelPtr wheel, void* user);
+  void        getWheelCallback(userWheelPtr *wheel, void** user);
+  
   MouseSelectionID getSelectState();
   void        setSelectState(MouseSelectionID state);
   double*     getMousePosition();
@@ -79,13 +87,16 @@ protected:
 
 
 private:
-	typedef void (RGLView::*viewControlPtr)(int mouseX,int mouseY);
-	typedef void (RGLView::*viewControlEndPtr)();
+  typedef void (RGLView::*viewControlPtr)(int mouseX,int mouseY);
+  typedef void (RGLView::*viewControlEndPtr)();
+  typedef void (RGLView::*viewWheelPtr)(int dir);
+    
 
-	viewControlPtr	ButtonBeginFunc[3], ButtonUpdateFunc[3];
-	viewControlEndPtr ButtonEndFunc[3];
+  viewControlPtr ButtonBeginFunc[3], ButtonUpdateFunc[3];
+  viewControlEndPtr ButtonEndFunc[3];
+  viewWheelPtr WheelRotateFunc;
 
-	void setDefaultMouseFunc();
+  void setDefaultMouseFunc();
 
 //
 // DRAG USER-INPUT
@@ -111,6 +122,9 @@ private:
   void oneAxisBegin(int mouseX, int mouseY);
   void oneAxisUpdate(int mouseX, int mouseY);  
 
+  void wheelRotatePull(int dir);
+  void wheelRotatePush(int dir);
+  
   PolarCoord camBase, dragBase, dragCurrent;
   Vertex rotBase, rotCurrent, axis[3];
 
@@ -137,6 +151,8 @@ private:
   void userUpdate(int mouseX, int mouseY);
   void userEnd();
   
+  void userWheel(int dir);
+  
   void* userData[9];
   userControlPtr beginCallback[3], updateCallback[3];
   userControlEndPtr endCallback[3];
@@ -144,7 +160,8 @@ private:
   int activeButton;
   bool busy;
   
-  
+  void* wheelData;
+  userWheelPtr wheelCallback;
 
 // o DRAG FEATURE: mouseSelection
   void mouseSelectionBegin(int mouseX,int mouseY);
@@ -178,6 +195,7 @@ private:
   MouseSelectionID selectState;
   double  mousePosition[4];
 
+  WheelModeID wheelMode;
 };
 
 } // namespace rgl
