@@ -578,4 +578,6 @@ v0.94
   - Changed the behaviour of pop3d() and rgl.pop():  the type is
     now ignored if id is non-zero.
   - par3d("modelMatrix") no longer includes the observer translation
+  - Added configurable mouse wheel actions via par3d() or 
+    rgl.setWheelCallback().
   
